<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BleTasker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">BLE Tasker</string>
    <string name="altImageLogo">BLE Tasker Logo</string>
    <string name="btn_login_text">Entrar</string>
    <string name="ed_password_hint">Contraseña</string>
    <string name="ed_userid_hint">ID usuario</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_close">Close</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="enter_tasks">Tareas Entrantes</string>
    <string name="pause_tasks">Tareas Pausadas</string>
    <string name="message">Mensajes Personales</string>



    <!--Activities titles-->
    <string name="title_activity_splash">Bienvenida</string>
    <string name="title_activity_main">Panel de control</string>
    <string name="title_activity_restore_user">Recuperación</string>

    <!--Drawer navigation labels and actions-->
    <string-array name="tagTasks">
        <item>Tareas</item>
        <item>Activas</item>
        <item>Pendientes</item>
        <item>Pausadas</item>
        <item>Canceladas</item>
        <item>Completas</item>
    </string-array>

    <string-array name="tagOptions">
        <item>Opciones</item>
        <item>Mensajes</item>
        <item>Historial</item>
    </string-array>

    <string-array name="tagConfiguration">
        <item>Ajustes</item>
        <item>Cerrar Sesión</item>
        <item>Desvincular dispositivo</item>
    </string-array>

    <!--URLs-->
    <string name="host">http://tfg.naddiaz.com</string>
    <string name="ws_url_data_hash_registration">/hash/confirm</string>
    <string name="ws_url_data_hash_verify">/hash/verify</string>
    <string name="ws_url_gcm_registration">/gcm/registration</string>
    <string name="ws_url_gcm_registration_unlink">/gcm/registration/unlink</string>
    <string name="ws_url_load_works">/employee/get/tasks</string>
    <string name="ws_url_state_work">/employee/set/task/state</string>
    <string name="ws_url_save_location">/location/save</string>

    <!--Error WS messages-->
    <string name="ws_error_timeout_hash">No se ha podido consultar el código, inténtelo de nuevo</string>
    <string name="ws_error_hash_false">Este código no es válido</string>
    <string name="ws_error_verify_hash">El código que se ha introducido ha dejado de ser válido por alguna razón</string>
    <string name="ws_error_load_works">Ha habido un error al recopilar la información de los trabajos. Puede haber una desincronización con el servidor</string>
    <string name="ws_error_timeout_works">Parece que no se ha podido conectar con el servidor para actualizar la lista de trabajos</string>
    <string name="ws_error_change_work_state">Ha habido un error en la sincronización del estado del trabajo</string>
    <string name="ws_error_timeout_sync">Ha habido una desincronización.</string>

    <!--Dialog message-->
    <string name="dialog_yes">Si</string>
    <string name="dialog_no">No</string>
    <string name="dialog_logout_message">¿Desea cerrar la sesión?</string>
    <string name="dialog_logout_message_description">Si cierra la sesión dejará de recibir notificaciones de tareas y mensajes</string>
    <string name="dialog_close_session">Cerrar Sesión</string>
    <string name="dialog_unlink_message">¿Desea desvincular el dispositivo?</string>
    <string name="dialog_unlink_message_description">Si desvincula el dispositivo, la próxima vez que quiera entrar en la aplicación le pedirá un nuevo código de acceso.</string>
    <string name="dialog_unlink_device">Desvincular</string>
    <string name="dialog_cancel_work_message">¿Desea cancelar la tarea?</string>
    <string name="dialog_cancel_work_description">Cancelar una tarea implica no poder volver a restaurar su estado a Activo o Pausado, ni tampoco marcarla como Finalizada</string>
    <string name="dialog_cancel_work">Cancelar Tarea</string>
    <string name="dialog_finish_work_message">¿Desea finalizar la tarea?</string>
    <string name="dialog_finish_work">Finalizar Tarea</string>

    <!--Generic-->
    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="headlines">Estás en </string>
    <string name="txt_welcome">Bienvenido</string>
    <string name="txt_loading_data_register">Cargando registro...</string>
    <string name="txt_advertisement_welcome_message">En este momento vamos a proceder a configurar la aplicación, tendrá que introducir el código que la empresa le ha proporcionado</string>
    <string name="txt_advertisement_welcome_message_remember">Si no los tiene o no los recuerda, por favor indíqueselo a la empresa para que se los proporcione de nuevo.</string>
    <string name="btn_advertisement_ok">Entendido</string>
    <string name="edtxt_hint_data_hash_register">Código</string>
    <string name="btn_data_hash_register">Verificar</string>
    <string name="txt_data_hash">Inserte el código proporcionado</string>
    <string name="keyboard_hash_register">LISTO</string>

    <string name="subheader_navigation">"ID empleado: "</string>
    <string name="item_action_run">Empezar</string>
    <string name="item_action_pause">Pausar</string>
    <string name="item_action_cancel">Cancelar</string>
    <string name="item_action_finish">Finalizar</string>
    <string name="txt_item_n_employees">Empleados asignados</string>
    <string name="txt_item_priority">Prioridad</string>
</resources>
