<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_green_500">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_data_hash"
            android:id="@+id/txtDataHash"
            android:textSize="20dp"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edTxtDataHashRegister"
            android:layout_margin="10dp"
            android:hint="@string/edtxt_hint_data_hash_register"
            android:inputType="text"
            android:imeActionId="@+id/action_hash_register"
            android:imeActionLabel="@string/keyboard_hash_register"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_data_hash_register"
            android:id="@+id/btnDataHashRegister"
            android:layout_gravity="right"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>