<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity$PlaceholderFragment"
    android:background="@drawable/bg">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

    </ScrollView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_user"
        android:hint="@string/ed_userid_hint"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_password"
        android:hint="@string/ed_password_hint"
        android:gravity="center_horizontal"
        android:layout_below="@+id/ed_user"
        android:layout_alignParentStart="true"
        android:inputType="textPassword" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/altImageLogo"
        android:background="@drawable/bletaskermini"
        android:padding="25dp"
        android:layout_above="@+id/ed_user"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_text"
        android:id="@+id/btn_login"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/scrollView"
        android:textColor="#FF166ECA"
        android:background="#FFFFFF"/>
</RelativeLayout>
