<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frg_splash_data"
    android:background="@color/md_green_500"
    android:gravity="center_vertical|center_horizontal">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_welcome"
                android:id="@+id/txtWelcome"
                android:layout_gravity="center_horizontal"
                android:textSize="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_advertisement_welcome_message"
                android:id="@+id/txtAdvertisementMessageWelcome"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_advertisement_welcome_message_remember"
                android:id="@+id/txtAdvertisementMessageWelcomeRemember"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_margin="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="right"
                android:layout_margin="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Entendido"
                    android:id="@+id/btnAdvertisementOk"
                    android:layout_gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>