<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6dip" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:showDividers="beginning">

        <LinearLayout
            android:id="@+id/lytItemTopBlock"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_green_900">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="ID_TASK"
                android:id="@+id/txtItemIdTask"
                android:layout_margin="10dp"
                android:textColor="@color/md_grey_100" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/viewborder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Date"
                android:id="@+id/txtItemDate"
                android:layout_margin="10dp"
                android:textColor="@color/md_grey_900" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Hour"
                android:id="@+id/txtItemHour"
                android:layout_margin="10dp"
                android:gravity="right"
                android:singleLine="false"
                android:textColor="@color/md_grey_900" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/viewborder">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Description"
                android:id="@+id/txtItemDescription"
                android:layout_margin="10dp"
                android:textColor="@color/md_grey_900"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytItemBottomBlock">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="right"
                android:background="@drawable/viewborder">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/txt_item_priority"
                        android:id="@+id/txtItemPriorityText"
                        android:textColor="@color/md_grey_900"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/txtItemPriority"
                        android:layout_margin="10dp"
                        android:text="0"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@color/md_grey_900" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:showDividers="beginning"
                    android:gravity="right">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/txt_item_n_employees"
                        android:id="@+id/txtItemNEmployeesText"
                        android:textColor="@color/md_grey_900"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/txtItemNEmployees"
                        android:layout_margin="10dp"
                        android:text="2"
                        android:gravity="center_horizontal|clip_vertical"
                        android:textColor="@color/md_grey_900" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:background="@color/md_grey_900"
                android:id="@+id/lytItemActions">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnItemRun"
                        android:drawableTop="@drawable/ic_action_play"
                        android:text="@string/item_action_run"
                        android:textSize="12dp"
                        android:textColor="@color/md_grey_100" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnItemPause"
                        android:drawableTop="@drawable/ic_action_pause_ligth"
                        android:text="@string/item_action_pause"
                        android:textSize="12dp"
                        android:textColor="@color/md_grey_100" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnItemCancel"
                        android:drawableTop="@drawable/ic_action_cancel_ligth"
                        android:text="@string/item_action_cancel"
                        android:textSize="12dp"
                        android:textColor="@color/md_grey_100" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnItemFinish"
                        android:drawableTop="@drawable/ic_action_check"
                        android:text="@string/item_action_finish"
                        android:textSize="12dp"
                        android:textColor="@color/md_grey_100" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>